# SoftwareGPS

./: README.md
dashboard_supervisor/: README.md  pubspec.yaml  (+1 more)
ingestion-service/: .env  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ingestion-service/app/: __init__.py  lifespan.py  main.py
ingestion-service/app/application/dto/: __init__.py
ingestion-service/app/application/services/: command_service.py  notification_service.py  websocket_service.py
ingestion-service/app/application/use_cases/: __init__.py  create_alert.py  get_latest_measurements.py  process_sensor_data.py  publish_command.py
ingestion-service/app/config/: __init__.py  database.py  logging.py  mqtt.py  settings.py
ingestion-service/app/domain/entities/: alert.py  command.py  device.py  measurement.py
ingestion-service/app/domain/repositories/: alert_repository.py  device_repository.py  measurement_repository.py
ingestion-service/app/domain/services/: anomaly_detector.py  rule_engine.py  validation.py
ingestion-service/app/events/: consumers.py  event_bus.py  event_types.py
ingestion-service/app/infrastructure/cache/: redis.py
ingestion-service/app/infrastructure/database/: session.py
ingestion-service/app/infrastructure/mqtt/: __init__.py  mqtt_client.py  mqtt_publisher.py  mqtt_subscriber.py  topic_router.py
ingestion-service/app/utils/: logger.py
ingestion-service/app/workers/: alert_worker.py  cleanup_worker.py  mqtt_worker.py
ingestion-service/docker/: Dockerfile
ingestion-service/tests/: __init__.py
ingestion-service/tests/mqtt/: __init__.py
(+21 files in other folders)
